remove RS Application and add REST Support by tylerchen